<resources>
    <string name="app_name">COVIDAnalyzer</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_vaccine">Vaccine</string>
    <string name="title_information">Information</string>
    <string name="covid_19">Covid-19</string>
    <string name="are_you_feeling_sick">Are you feeling sick?</string>
    <string name="if_you_feel">If you feel sick with any of covid-19 symptoms please call or SMS us immediately for help.</string>
    <string name="call_now">Call Now</string>
    <string name="send_sms">Send Sms</string>
    <string name="Women_bottom">A Woman image with haind raised towards aid</string>
    <string name="do_your_own_test">Do your own test?</string>
    <string name="follow_the_instructions_to_do_your_own_test">Follow the instructions to do your own test.</string>
    <string name="statistics">Statistics</string>
    <string name="methods_of_prevention">Methods Of Prevention</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="serious">Serious</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="affected">Affected</string>
</resources>