<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pugs.covidanalyzer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.pugs.covidanalyzer.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_vaccine"
        android:name="com.pugs.covidanalyzer.ui.vaccine.VaccineFragment"
        android:label="@string/title_vaccine"
        tools:layout="@layout/fragment_vaccine" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.pugs.covidanalyzer.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

</navigation>